--- a/BoaViagem/AndroidManifest.xml
+++ b/BoaViagem/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="br.com.casadocodigo.boaviagem"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="1.0"
+          >
     <uses-sdk android:minSdkVersion="10"/>
-    <application android:label="@string/app_name">
+    <application android:label="@string/app_name"
+                 android:theme="@android:style/Theme.NoTitleBar">
         <activity android:name="BoaViagemActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -12,5 +14,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".DashboardActivity" />
     </application>
 </manifest>
