Tela de nova viagem

--- a/BoaViagem/AndroidManifest.xml
+++ b/BoaViagem/AndroidManifest.xml
@@ -15,5 +15,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".DashboardActivity" />
+        <activity android:name=".ViagemActivity" />
     </application>
 </manifest>
