--- a/BoaViagem/AndroidManifest.xml
+++ b/BoaViagem/AndroidManifest.xml
@@ -16,5 +16,6 @@
         </activity>
         <activity android:name=".DashboardActivity" />
         <activity android:name=".ViagemActivity" />
+        <activity android:name=".GastoActivity" />
     </application>
 </manifest>
