--- a/BoaViagem/AndroidManifest.xml
+++ b/BoaViagem/AndroidManifest.xml
@@ -17,5 +17,8 @@
         <activity android:name=".DashboardActivity" />
         <activity android:name=".ViagemActivity" />
         <activity android:name=".GastoActivity" />
+        <activity android:name=".ViagemListActivity" />
+        <activity android:name=".GastoListActivity" />
+
     </application>
 </manifest>
